--- a/assets/css/govt.css
+++ b/assets/css/govt.css
@@ -6,13 +6,14 @@
 body {
     font-family: 'Raleway', sans-serif;
 }
+
 /* nav bar  */
 .menu-bar {
     height: 120px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: white;
+    background-color: #d70f64;
 }
 
 .menu-bar img {
@@ -40,7 +41,7 @@ body {
 .menu-bar ul li::after {
     content: '';
     display: block;
-    background-color: #d70f64;
+    background-color: white;
     height: 2px;
     width: 0%;
     margin: auto;
@@ -54,14 +55,14 @@ body {
 .menu-bar ul li a {
     font-size: 20px;
     text-decoration: none;
-    color: #d70f64;
+    color: white;
 }
 
-/* buy bg  */
-.gethelpbg {
-    background-image: linear-gradient(rgb(4, 9, 30, 0.7), rgb(4, 9, 30, 0.7)), url(../images/buybg.png);
+/*navbarends*/
+.sec1h1 {
+    background-image: linear-gradient(rgb(4, 9, 30, 0.7), rgb(4, 9, 30, 0.7)), url(../images/govtschemebg.jpg);
     background-attachment: fixed;
-    background-size: cover;
+    background-size: 1510px;
     background-position: top;
     background-repeat: no-repeat;
     min-height: 30vh;
@@ -73,6 +74,7 @@ body {
     color: white;
     letter-spacing: 1px;
 }
+
 /* animation*/
 /* .sec1h1 h1{
     background: url(../images/back.png);
@@ -87,54 +89,41 @@ body {
         background-position: 2000px 0;
     }
 } */
-.sec2 h2 {
-    text-align: center;
-    padding-top: 50px;
-    padding-bottom: 50px;
+table,
+td,
+th {
+    border: 1px solid #ddd;
+    text-align: left;
 }
-.join {
-    cursor: pointer;
-    background-color:#d70f64;
+
+table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+th,
+td {
+    padding: 15px;
+}
+
+tr:nth-child(odd) {
+    background-color: #fbcee1;
+}
+th{
+    background-color: #d70f64;
     color: white;
-    font-weight: 500;
-    position: relative;
-    /* top: 160px; */
-    /* left: 70px; */
-    padding: 20px 85px;
-    border: none;
-    margin-top: 40px;
-   
 }
-.join:hover{
-    background-color: #f2f2ff;
-    color: #d70f64;
-    border: 1px solid #d70f64;
-    padding: 18px 83px;
+td{
+    border: 2px solid gray;
 }
-.products{
-    background-color: rgb(255, 239, 239);
-    height:550px;
-    width: 400px;
-    text-align: center;
-    border-radius: 20px;
-    margin: 45px;
+table{
+    width:1300px;
+    margin: 90px;
+    border: 2px solid gray;
 }
-.products img{
-    width: 300px;
-    height: 300px;
-    /* margin-left: 50px; */
-    margin-top: 50px;
-    border-radius: 10px;
-}
-.products h1{
-    margin-top: 20px;
-}
-.products p{
-    margin-top: 20px;
-}
-.sec3{
-    display: flex;
-    flex-wrap: wrap;
+footer {
+    background-color: #d70f64;
+    padding-top: 50px;
 }
 .foot1 {
     display: flex;
@@ -142,43 +131,37 @@ body {
     margin: 20px 100px 0px 160px;
     color: white;
 }
-#footer{
-    background-color: #d70f64;
-}
 .fb img {
     padding-left: 15px;
 }
-
 .foot2 {
     display: flex;
     justify-content: space-between;
     margin: 0px 100px 0px 160px;
     color: white;
 }
-
 .foot2p p {
     font-weight: 500;
     padding-top: 20px;
 }
-
 .foot22p {
     display: flex;
 }
-
 .foot22p p {
     padding-left: 60px;
     padding-top: 20px;
     font-weight: 500;
     margin-bottom: 50px;
 }
-
 .foot3 {
     display: flex;
     justify-content: space-between;
     color: white;
     margin: 30px 100px 0px 160px;
 }
-
-.foot3 p {
+.add p {
+    padding-left: 30px;
+}
+.mail p {
     padding-left: 30px;
 }
