--- a/assets/css/buy.css
+++ b/assets/css/buy.css
@@ -74,7 +74,7 @@ body {
     letter-spacing: 1px;
 }
 /* animation*/
-/* .sec1h1 h1{
+.sec1h1 h1{
     background: url(../images/back.png);
     color: transparent;
     -webkit-text-stroke: 0.50px white;
@@ -86,7 +86,7 @@ body {
     100%{
         background-position: 2000px 0;
     }
-} */
+}
 .sec2 h2 {
     text-align: center;
     padding-top: 50px;
