--- a/assets/css/book.css
+++ b/assets/css/book.css
@@ -75,7 +75,7 @@ body {
 }
 
 /* animation*/
-/* .sec1h1 h1{
+.sec1h1 h1{
     background: url(../images/back.png);
     color: transparent;
     -webkit-text-stroke: 0.50px white;
@@ -87,7 +87,7 @@ body {
     100%{
         background-position: 2000px 0;
     }
-} */
+}
 .sec2 h2 {
     text-align: center;
     padding-top: 50px;
