--- a/assets/css/gethelp.css
+++ b/assets/css/gethelp.css
@@ -107,7 +107,7 @@ body {
 }
 
 /* animation*/
-/* .sec1h1 h1{
+.sec1h1 h1{
     background: url(../images/back.png);
     color: transparent;
     -webkit-text-stroke: 0.50px white;
@@ -119,7 +119,7 @@ body {
     100%{
         background-position: 2000px 0;
     }
-} */
+}
 .join {
     cursor: pointer;
     background-color: white;
