--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,7 +90,7 @@ body {
   letter-spacing: 1px;
   color: #d70f64;
 }
-/* .main1full h1{
+.main1full h1{
   background: url(../images/back.png);
   color: transparent;
   -webkit-text-stroke: 0.5px white;
@@ -102,7 +102,7 @@ body {
   100%{
       background-position: 2000px 0;
   }
-} */
+}
 .main1full p {
   text-align: center;
   margin: 30px 35px;
