--- a/assets/css/buy.css
+++ b/assets/css/buy.css
@@ -74,7 +74,7 @@ body {
     letter-spacing: 1px;
 }
 /* animation*/
-.sec1h1 h1{
+.gethelpbg h1{
     background: url(../images/back.png);
     color: transparent;
     -webkit-text-stroke: 0.50px white;
