--- a/assets/css/book.css
+++ b/assets/css/book.css
@@ -8,7 +8,7 @@ body {
     margin: 0px;
     background-color: #f2f2ff;
 }
-
+/* navbar  */
 .menu-bar {
     height: 120px;
     display: flex;
@@ -37,6 +37,7 @@ body {
     font-weight: 400;
 }
 
+/* nav hover style  */
 .menu-bar ul li::after {
     content: '';
     display: block;
@@ -58,6 +59,7 @@ body {
 }
 
 /* nav bar ends  */
+/* content starts  */
 .sec1h1 {
     background-image: linear-gradient(rgb(4, 9, 30, 0.7), rgb(4, 9, 30, 0.7)), url(../images/bookback.jpg);
     background-attachment: fixed;
@@ -74,46 +76,32 @@ body {
     letter-spacing: 1px;
 }
 
-/* animation*/
-.sec1h1 h1{
-    background: url(../images/back.png);
-    color: transparent;
-    -webkit-text-stroke: 0.50px white;
-    -webkit-background-clip: text;
-    background-position: 0 0;
-    animation:back 20s linear infinite;
-}
-@keyframes back{
-    100%{
-        background-position: 2000px 0;
-    }
-}
+
 .sec2 h2 {
     text-align: center;
     padding-top: 50px;
     padding-bottom: 50px;
 }
-
+/* button  */
 .join {
     cursor: pointer;
-    background-color:#d70f64;
+    background-color: #d70f64;
     color: white;
     font-weight: 500;
     position: relative;
-    /* top: 160px; */
-    /* left: 70px; */
     padding: 20px 85px;
     border: none;
     margin-top: 80px;
-   
+
 }
-.join:hover{
+
+.join:hover {
     background-color: #f2f2ff;
     color: #d70f64;
     border: 1px solid #d70f64;
     padding: 18px 83px;
 }
-
+/* drop down style  */
 .dropdown-menu {
     position: relative;
     display: none;
@@ -122,7 +110,7 @@ body {
 
 .dropdown-menu1 {
     display: none;
-    border:2px solid #d70f64
+    border: 2px solid #d70f64
 }
 
 .dropdown-menu1 ul li {
@@ -155,74 +143,87 @@ body {
 .dropdown1:hover .dropdown-menu ul li {
     width: 120px;
 }
-.hos1{
+
+.hos1 {
     display: flex;
     justify-content: space-evenly;
-    /* border:2px solid #d70f64 */
     padding-top: 40px;
     padding-bottom: 60px;
-    
+
 }
-.hos1 img{
+
+.hos1 img {
     box-shadow: 2px 4px 10px 6px gray;
     border-radius: 20px;
     transition: 0.5s;
 }
-.hos1 img:hover{
+
+.hos1 img:hover {
     transform: scale(1.1);
     box-shadow: 1px 2px 5px 3px gray;
 }
-.hos1 p{
+
+.hos1 p {
     padding-top: 30px;
     width: 500px;
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    font-weight:bold;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-weight: bold;
 }
-#footer{
+/* footer  */
+#footer {
     position: relative;
-   /* top: 2150px; */
 }
+
 footer {
     background-color: #d70f64;
     padding-top: 50px;
 }
+
 .foot1 {
     display: flex;
     justify-content: space-between;
     margin: 20px 100px 0px 160px;
     color: white;
 }
+
 .fb img {
     padding-left: 15px;
 }
+
 .foot2 {
     display: flex;
     justify-content: space-between;
     margin: 0px 100px 0px 160px;
     color: white;
 }
+
 .foot2p p {
     font-weight: 500;
     padding-top: 20px;
 }
+
 .foot22p {
     display: flex;
 }
+
 .foot22p p {
     padding-left: 60px;
     padding-top: 20px;
     font-weight: 500;
     margin-bottom: 50px;
 }
+
 .foot3 {
     display: flex;
     justify-content: space-between;
     color: white;
     margin: 30px 100px 0px 160px;
 }
+
 .add p {
     padding-left: 30px;
 }
+
 .mail p {
     padding-left: 30px;
 }
