--- a/assets/css/appointment.css
+++ b/assets/css/appointment.css
@@ -71,7 +71,9 @@ body {
     float: left;
     box-shadow: -1px 9px 14px 7px rgba(26, 22, 26, 0.52);
 }
-
+.appimg img:hover{
+    box-shadow: 5px 10px 18px #888888;
+}
 .appimg h4 {
     color: white;
     text-align: center;
