--- a/assets/css/buy.css
+++ b/assets/css/buy.css
@@ -115,7 +115,9 @@ body {
     margin-top: 50px;
     border-radius: 10px;
 }
-
+.products img:hover{
+    box-shadow: 5px 10px 18px #888888;
+}
 .products h1 {
     margin-top: 20px;
 }
