--- a/assets/css/involve.css
+++ b/assets/css/involve.css
@@ -110,6 +110,9 @@ body {
 .sec1 img{
     border-radius: 20px;
 }
+.sec1 img:hover{
+    box-shadow: 5px 10px 18px #888888;
+}
 .foot1 {
     display: flex;
     justify-content: space-between;
