--- a/assets/css/govt.css
+++ b/assets/css/govt.css
@@ -76,7 +76,20 @@ caption{
     color: white;
     letter-spacing: 1px;
 }
-
+/* animation*/
+.sec1h1 h1{
+    background: url(../images/back.png);
+    color: transparent;
+    -webkit-text-stroke: 0.50px white;
+    -webkit-background-clip: text;
+    background-position: 0 0;
+    animation:back 20s linear infinite;
+}
+@keyframes back{
+    100%{
+        background-position: 2000px 0;
+    }
+}
 
 table,
 td,
