--- a/assets/css/gethelp.css
+++ b/assets/css/gethelp.css
@@ -188,9 +188,10 @@ body {
 }
 
 .medicimgs img{
-    padding: 50px;
-    width: 900px;
+    margin-left: 50px;
+    width: 500px;
     transition: 0.3s;
+    border-radius: 20px;
 }
 
 .medicimgs img:hover {
@@ -244,13 +245,14 @@ body {
 }
 
 .productinfo img {
-    padding: 20px;
-    width: 550px;
+    margin-left: 40px;
+    width: 500px;
     transition: 0.3s;
 }
 
 .productsimgs img:hover {
     transform: scale(1.1);
+    box-shadow: 5px 10px 18px #888888;
 }
 
 .productsimgs::-webkit-scrollbar {
