--- a/assets/css/buy.css
+++ b/assets/css/buy.css
@@ -93,7 +93,13 @@ body {
     text-align: center;
     padding-top: 50px;
     padding-bottom: 50px;
+    animation-name: slide;
+    animation-duration: 2s;
 }
+@keyframes slide{
+    0%{opacity: 0;}
+    100%{ opacity: 1;}
+    }
 
 .join {
     cursor: pointer;
@@ -121,8 +127,13 @@ body {
     text-align: center;
     border-radius: 20px;
     margin: 45px;
+    animation-name: new;
+    animation-duration: 4s;
 }
-
+@keyframes new{
+    0%{transform: translateX(1500px);opacity: 0;}
+    100%{transform: translateX(0px); opacity: 1;}
+    }
 .products img {
     width: 300px;
     height: 300px;
@@ -144,7 +155,7 @@ body {
     display: flex;
     flex-wrap: wrap;
 }
-
+/* footer  */
 .foot1 {
     display: flex;
     justify-content: space-between;
