--- a/assets/css/inspire.css
+++ b/assets/css/inspire.css
@@ -58,6 +58,52 @@ body {
     text-decoration: none;
     color: #d70f64;
 }
+@media screen and (max-width:600px) {
+    .menu-bar {
+      height: 80px;
+      display:contents ;
+      justify-content: space-between;
+      align-items: none;
+      position: sticky;
+      top: 0px;
+      /* border: 2px solid red; */
+      background-color: #fff;
+    
+    }
+    
+    .menu-bar img {
+      margin-left:0px;
+      margin-top: 0px;
+      width: 80px;
+      /* border: 2px solid red; */
+      position: relative;
+      left:40%;
+      
+    }
+    
+    .menu-bar ul {
+      display: flex;
+      margin-top: 10px;
+      width:550px;
+      margin-left: 10px;
+      /* border: 2px solid red; */
+     
+    }
+    
+    .menu-bar ul li {
+      position: relative;
+      margin-right: 13px;
+      list-style: none;
+      padding-top: 6px;
+      
+    }
+    .menu-bar ul li a {
+      font-size: 9px;
+      text-decoration: none;
+      color: #d70f64;
+     
+    }
+}
 .sec1h1 {
     background-image: linear-gradient(rgb(4, 9, 30, 0.7), rgb(4, 9, 30, 0.7)), url(../images/inspirebg.jpg);
     background-attachment: fixed;
@@ -72,6 +118,23 @@ body {
     font-weight: 400;
     color: white;
     letter-spacing: 1px;
+}
+@media screen and (max-width:600px) {
+    .sec1h1 {
+        background-color:rgb(42, 42, 71);
+        background-attachment: fixed;
+        background-size: 800px;
+        background-position: top,center;
+        background-repeat: no-repeat;
+        min-height: 15vh;
+        text-align: center;
+        font-size: 20px;
+        padding-top: 150px;
+        text-transform: uppercase;
+        font-weight: 400;
+        color: white;
+        letter-spacing: 1px;
+    }
 }
 /* animation*/
 .sec1h1 h1{
@@ -225,3 +288,56 @@ iframe{
 .foot3 p {
     padding-left: 30px;
 }
+@media screen and (max-width:600px)  {
+    .foot1 {
+      color: white;
+      margin-left: 25px;
+      width: 350px;
+    }
+    .foot1 img{
+      width: 100px;
+    }
+    
+    .fb img {
+      padding-left: 15px;
+      width: 25px;
+  
+    }
+    .foot2 {
+      display: contents;
+      color:white;
+      
+    }
+    
+    .foot2p p {
+      font-weight: 500;
+      /* padding-top: 20px; */
+    }
+    
+    .foot22p {
+      display: flex;
+    }
+    
+    .foot22p p {
+      padding-top: 20px;
+      font-weight: 500;
+      margin-bottom: 0px;
+    }
+    
+    .foot3 {
+      margin-left: 0px;
+      color: white;
+      width: 400px;
+    }
+    
+    .foot3 p {
+      font-size: 10px;
+      margin-right: 20px;
+    }
+    .foot3 h4{
+    
+      font-size: 15px;
+      margin-right: 20px;
+    }
+    
+  }
