--- a/assets/css/book.css
+++ b/assets/css/book.css
@@ -7,7 +7,7 @@
 body {
     font-family: 'Merienda', cursive;
     margin: 0px;
-    font-family: 'Merienda', cursive;
+    
     background-image: url(../images/circle-scatter-haikei3.png);
     background-attachment: fixed;
     background-repeat: no-repeat;
@@ -85,6 +85,11 @@ body {
     /* border: 2px solid #6C3DD9 */
     
    
+}
+.pointer{
+    position: absolute;
+    right: 0px;
+    top: 0px;
 }
 /* drop down style  */
 .dropdown-menu {
